// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`openapi project with examples renders array + allOf example 1`] = `
"<div class="openapi">

# example.array

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{
    "a": [
        {
            "c": "c",
            "d": "d"
        }
    ]
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 a {.openapi-table-parameter-name} 
|
 **Type:** object[] 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

Base 200 response

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`openapi project with examples renders array + oneOf + allOf example 1`] = `
"<div class="openapi">

# example.array

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{
    "a": [
        {
            "a": "a"
        },
        {
            "b": "b"
        }
    ]
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 a {.openapi-table-parameter-name} 
|
 **Type:** any[] 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

Base 200 response

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`openapi project with examples renders array + oneOf example 1`] = `
"<div class="openapi">

# example.array

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{
    "a": [
        "s",
        "0"
    ]
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 a {.openapi-table-parameter-name} 
|
 **Type:** (string 
or integer)[] 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

Base 200 response

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`openapi project with examples renders example field 1`] = `
"<div class="openapi">

# example.array

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
[
    {
        "test": 1
    },
    {
        "test": 2
    }
]
\`\`\`


{% endcut %}


any[]

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

Base 200 response

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`openapi project with examples renders infered example 1`] = `
"<div class="openapi">

# example.array

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
[
    {
        "name": "string"
    }
]
\`\`\`


{% endcut %}


[Cat](#cat)[]

</div>

<div class="openapi-entity">

### Cat

#|||
 **Name** 
|
 **Description** 
||

||
 name {.openapi-table-parameter-name} 
|
 **Type:** string 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

Base 200 response

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`openapi project with examples renders nested arrays exmaple 1`] = `
"<div class="openapi">

# example.array

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
[
    [
        {
            "name": "string"
        }
    ]
]
\`\`\`


{% endcut %}


[Cat](#cat)[][]

</div>

<div class="openapi-entity">

### Cat

#|||
 **Name** 
|
 **Description** 
||

||
 name {.openapi-table-parameter-name} 
|
 **Type:** string 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

Base 200 response

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;
